By using latest 1.x of elasticsearch we fix the nasty systemd startup problem

--- a/provisioning/roles/morph-app/meta/main.yml
+++ b/provisioning/roles/morph-app/meta/main.yml
@@ -10,6 +10,7 @@ dependencies:
   - { role: mitmproxy }
   - role: f500.elasticsearch
     elasticsearch_network_host: localhost
+    elasticsearch_version: 1.7
   - role: nickhammond.logrotate
     logrotate_scripts:
       - name: rails
