--- a/provisioning/playbook.yml
+++ b/provisioning/playbook.yml
@@ -31,3 +31,6 @@
   roles:
     - morph-app
     - discourse
+  # The default behaviour is for handlers not to get called if a playbook fails
+  # for any reason. Make handlers get called
+  force_handlers: True
