--- a/provisioning/roles/morph-app/tasks/main.yml
+++ b/provisioning/roles/morph-app/tasks/main.yml
@@ -130,8 +130,13 @@
 - name: Dependency for following command
   apt: pkg=python-passlib
 
-- name: Set timezone in /etc/timezone
-  copy: src=timezone dest=/etc/timezone
+# We have to do it like this for Ubuntu 16.04
+# See https://bugs.launchpad.net/ubuntu/+source/tzdata/+bug/1554806
+- name: Link to correct timezone
+  file:
+    src: /usr/share/zoneinfo/Australia/Sydney
+    dest: /etc/localtime
+    state: link
   notify: Update timezone
 
 # TODO: Use special_time (or at least look at using it)
