--- a/provisioning/roles/morph-app/tasks/main.yml
+++ b/provisioning/roles/morph-app/tasks/main.yml
@@ -165,7 +165,7 @@
   copy: src=iptables-morph-remove dest=/usr/local/sbin mode=0755
 
 - name: run iptables morph setup script at boot
-  copy: src=interfaces dest=/etc/network/if-up.d/iptables-morph-add mode=0755
+  copy: src=interfaces dest=/etc/network/if-pre-up.d/iptables-morph-add mode=0755
 
 # We're going to use monit to monitor the sidekiq worker to ensure that it doesn't
 # use too much memory
