Clean up github_users list

--- a/provisioning/roles/ruby/meta/main.yml
+++ b/provisioning/roles/ruby/meta/main.yml
@@ -1,4 +1,4 @@
 ---
 dependencies:
   - role: deploy-user
-    github_users: ['mlandauer', 'henare', 'equivalentideas', 'auxesis']
+    github_users: ['mlandauer', 'henare']
