Add James so he can get on to morph.io

--- a/provisioning/roles/ruby/meta/main.yml
+++ b/provisioning/roles/ruby/meta/main.yml
@@ -1,4 +1,4 @@
 ---
 dependencies:
   - role: deploy-user
-    github_users: ['mlandauer', 'henare']
+    github_users: ['mlandauer', 'henare', 'jamezpolley']
