Turn encrypted files into templates with encrypted variables

--- a/provisioning/roles/morph-app/tasks/main.yml
+++ b/provisioning/roles/morph-app/tasks/main.yml
@@ -136,10 +136,10 @@
   file: path=/root/.duply/sqlite state=directory
 
 - name: Copy across duply backup config for mysql
-  copy: src=duply_mysql_conf dest=/root/.duply/mysql/conf owner=root group=root mode=0400
+  template: src=duply_mysql_conf dest=/root/.duply/mysql/conf owner=root group=root mode=0400
 
 - name: Copy across duply backup config for sqlite
-  copy: src=duply_sqlite_conf dest=/root/.duply/sqlite/conf owner=root group=root mode=0400
+  template: src=duply_sqlite_conf dest=/root/.duply/sqlite/conf owner=root group=root mode=0400
 
 - name: Do backups daily of mysql to S3 at 4:40AM
   cron: name="duply mysql" hour=4 minute=40 user=root job="duply mysql backup"
