--- a/provisioning/roles/morph-app/tasks/main.yml
+++ b/provisioning/roles/morph-app/tasks/main.yml
@@ -73,7 +73,7 @@
   template: src=database.yml dest=/var/www/shared/config/database.yml owner=deploy group=deploy
 
 - name: Copy across newrelic configuration
-  copy: src=newrelic.yml dest=/var/www/shared/config/newrelic.yml
+  template: src=newrelic.yml dest=/var/www/shared/config/newrelic.yml
   notify: restart nginx
 
 - name: Dependency for following command
