Install required roles using ansible galaxy (like infrastructure)

--- a/.gitignore
+++ b/.gitignore
@@ -34,3 +34,4 @@ coverage
 db/backups
 docker_images/morph-mitmdump/mitmproxy/mitmproxy-dhparam.pem
 playbook.retry
+provisioning/roles/geerlingguy.java
