Switch over to elasticsearch roles as used in infrastructure repo

--- a/.gitignore
+++ b/.gitignore
@@ -35,5 +35,7 @@ db/backups
 docker_images/morph-mitmdump/mitmproxy/mitmproxy-dhparam.pem
 playbook.retry
 provisioning/roles/geerlingguy.java
+provisioning/roles/azavea.elasticsearch
+provisioning/roles/azavea.java
 provisioning/roles/morph-app/files/ssl/dev.morph.io.key
 provisioning/roles/morph-app/files/ssl/dev.morph.io.pem
