--- a/provisioning/roles/morph-app/meta/main.yml
+++ b/provisioning/roles/morph-app/meta/main.yml
@@ -9,9 +9,10 @@ dependencies:
   - { role: newrelic-sysmond }
   - { role: mitmproxy }
   - { role: certbot }
-  - role: f500.elasticsearch
-    elasticsearch_network_host: localhost
-    elasticsearch_version: 1.7
+  - role: azavea.elasticsearch
+    elasticsearch_version: 1.7.6
+    elasticsearch_bind_host: 127.0.0.1
+    java_version: "8u162*"
   - role: nickhammond.logrotate
     logrotate_scripts:
       - name: rails
