--- a/.gitignore
+++ b/.gitignore
@@ -37,5 +37,6 @@ playbook.retry
 provisioning/roles/geerlingguy.java
 provisioning/roles/azavea.elasticsearch
 provisioning/roles/azavea.java
+provisioning/roles/nickhammond.logrotate
 provisioning/roles/morph-app/files/ssl/dev.morph.io.key
 provisioning/roles/morph-app/files/ssl/dev.morph.io.pem
