--- a/provisioning/requirements.yml
+++ b/provisioning/requirements.yml
@@ -9,6 +9,7 @@
   # Latest version as of Jan 2018
   version: 0.6.1
 
-# Commenting out because our local version has been modified from the original
-# - src: nickhammond.logrotate
-#   version: 71b0ab39066f2dfd5b2701205cf398e97cda52c2
+- src: nickhammond.logrotate
+  # Version 0.0.3 contains the fix
+  # https://github.com/nickhammond/ansible-logrotate/commit/3e0c0895245b451120043a68b313cd1eadccda16
+  version: v0.0.3
