Switch to geerlingguy's elasticsearch plugin
azavea can only handle releases in the 1.4.x series, and hasn't been
updated in ~2 years.

By contrast, geerlingguy's plugin doesn't take a parameter for the
version at all. Not yet sure if this gives a useful result.

--- a/.gitignore
+++ b/.gitignore
@@ -41,3 +41,4 @@ provisioning/roles/nickhammond.logrotate
 provisioning/roles/infrastructure-agent-ansible
 provisioning/roles/morph-app/files/ssl/dev.morph.io.key
 provisioning/roles/morph-app/files/ssl/dev.morph.io.pem
+provisioning/roles/geerlingguy.elasticsearch/
