--- a/provisioning/roles/morph-app/meta/main.yml
+++ b/provisioning/roles/morph-app/meta/main.yml
@@ -12,10 +12,9 @@ dependencies:
       license_key: "{{ newrelic_license_key }}"
   - { role: mitmproxy }
   - { role: certbot }
-  - role: azavea.elasticsearch
+  - role: geerlingguy.elasticsearch
     elasticsearch_version: 1.7.6
     elasticsearch_bind_host: 127.0.0.1
-    java_version: "8u*"
   - role: nickhammond.logrotate
     logrotate_scripts:
       - name: rails
