Update mitmproxy image
 - Latest version of mitmproxy, which has better options for logging,
   which helps us figure out what's happening
 - Improved makefile for use in dev

 - Better mitmdump testing of SSL-related issues

   Adds some docs to guide the installer on how to set up ssl in the
   mitmdump image.

   Modify Ansible to *not* pull the mitmdump image every time, as this
   undoes the work done to set up SSL.

 - Update mitmdump to be based on stretch

   Jessie is effectively dead at present

--- a/docker_images/morph-mitmdump/Dockerfile
+++ b/docker_images/morph-mitmdump/Dockerfile
@@ -1,26 +1,31 @@
-FROM debian:jessie
+FROM python:3.6-slim-stretch
 MAINTAINER Matthew Landauer <matthew@oaf.org.au>
 
 # We're install python on its own first so that when we install python-pip
 # and later uninstall python-pip and run autoremove it leaves a working python
 # behind
-RUN apt-get update && apt-get install -y python
+#RUN apt-get update && apt-get install -y python
 
 # Need to install ca-certificates otherwise won't verify ssl certificate
 # of morph.io which is necessary for the connection log callback
+RUN apt-get update && \
+    apt-get upgrade -y
+
 RUN apt-get install -y \
   libffi-dev   \
   libssl-dev   \
   libxslt1-dev \
   libjpeg62-turbo-dev \
-  python-dev   \
-  python-pip \
+  #python-dev   \
+  #python-pip \
   ca-certificates
 
+RUN pip install --upgrade pip
+RUN pip install --upgrade pyOpenSSL
 RUN pip install --upgrade setuptools
 RUN pip install --upgrade cffi
 RUN pip install --upgrade cryptography
-RUN pip install mitmproxy==0.12
+RUN pip install mitmproxy
 RUN pip install --upgrade pyOpenSSL
 RUN pip install --upgrade pyasn1
 RUN pip install ipaddress
@@ -44,5 +49,5 @@ RUN rm -rf /var/lib/{apt,dpkg,cache,log}
 # TODO: Don't run as root
 
 COPY mitmproxy /mitmproxy
-CMD ["mitmdump", "--quiet", "--transparent", "--script", "/mitmproxy/log_to_morph.py", "--cadir", "/mitmproxy"]
+CMD ["mitmdump", "--confdir", "/mitmproxy", "--mode", "transparent", "--showhost"]
 EXPOSE 8080
