Switch to the current newrelic infa agent
The older version isn't installable any more.

--- a/provisioning/roles/morph-app/meta/main.yml
+++ b/provisioning/roles/morph-app/meta/main.yml
@@ -7,7 +7,7 @@ dependencies:
   - { role: backups }
   - { role: redis }
   - { role: newrelic-sysmond }
-  - role: infrastructure-agent-ansible
+  - role: newrelic.newrelic-infra
     nrinfragent_config:
       license_key: "{{ newrelic_license_key }}"
   - { role: mitmproxy }
