--- a/provisioning/requirements.yml
+++ b/provisioning/requirements.yml
@@ -10,7 +10,6 @@
   # https://github.com/nickhammond/ansible-logrotate/commit/3e0c0895245b451120043a68b313cd1eadccda16
   version: v0.0.3
 
-# Installing through ansible galaxy doesn't work`
-# See https://github.com/newrelic/infrastructure-agent-ansible/issues/39
-- src: https://github.com/newrelic/infrastructure-agent-ansible.git
-  version: 0.3.0
+- src: newrelic.newrelic-infra
+  version: 0.6.0
+
