Create a Makefile for simpler production updates

--- a/.gitignore
+++ b/.gitignore
@@ -34,6 +34,7 @@ coverage
 db/backups
 docker_images/morph-mitmdump/mitmproxy/mitmproxy-dhparam.pem
 playbook.retry
+provisioning/.roles-installed
 provisioning/roles/geerlingguy.java
 provisioning/roles/azavea.elasticsearch
 provisioning/roles/azavea.java
@@ -42,3 +43,4 @@ provisioning/roles/nickhammond.logrotate
 provisioning/roles/morph-app/files/ssl/dev.morph.io.key
 provisioning/roles/morph-app/files/ssl/dev.morph.io.pem
 provisioning/roles/geerlingguy.elasticsearch/
+.venv/
