--- a/.travis.yml
+++ b/.travis.yml
@@ -1,22 +1,11 @@
-dist: xenial
+-provisioning/roles/morph-app/tasks/main.yml
+  
+   -config/deploy.rb
 
-language: ruby
-rvm:
-  - 2.3.1
-env: SECRET_KEY_BASE=859384 RUN_SLOW_TESTS=true
 
-before_install:
+     -before_script
+     -env{SECRET_KEY_BASE=859384 RUN_SLOW_TESTS=true
+     -before_install:
   - gem install bundler:1.17.3
-
-before_script:
-  - cp config/database.travis.yml config/database.yml
-  - bundle exec rake db:setup
-  - docker pull openaustralia/buildstep
-
-after_success:
-  - bundle exec codeclimate-test-reporter
-
-services:
-  - docker
-  - redis
-  - mysql
+     -language: ruby
+rvm: {en-java-client
