Get vagrant build working again with recent changes in the outside world

--- a/provisioning/roles/ruby/tasks/main.yml
+++ b/provisioning/roles/ruby/tasks/main.yml
@@ -3,7 +3,7 @@
   apt: pkg=curl
 
 - name: Install gpg key for rvm
-  shell: gpg --keyserver hkp://keys.gnupg.net --recv-keys 409B6B1796C275462A1703113804BB82D39DC0E3 7D2BAF1CF37B13E2069D6956105BD0E739499BDB
+  shell: gpg --keyserver keyserver.ubuntu.com --recv-keys 409B6B1796C275462A1703113804BB82D39DC0E3 7D2BAF1CF37B13E2069D6956105BD0E739499BDB
   become_user: deploy
 
 # TODO: Maybe install rvm by installing the package ruby-rvm?
@@ -42,5 +42,5 @@
   notify: Make ruby-2.3.1 the default
 
 - name: Install bundler
-  command: bash -lc "rvm ruby-2.3.1; gem install bundler"
+  command: bash -lc "rvm ruby-2.3.1; gem install bundler --version 2.0.2"
   become_user: deploy
