--- a/provisioning/roles/backups/tasks/main.yml
+++ b/provisioning/roles/backups/tasks/main.yml
@@ -2,11 +2,11 @@
 - name: Add the Percona repository key
   apt_key:
     id: 8507EFA5
-    keyserver: keys.gnupg.net
+    keyserver: keyserver.ubuntu.com
 - name: Add the Percona sources
-  apt_repository: repo='deb http://repo.percona.com/apt xenial main'
+  apt_repository: repo='deb https://repo.percona.com/apt xenial main'
 - name: Install percona xtrabackup
-  apt: pkg=percona-xtrabackup update_cache=yes cache_valid_time=3600
+  apt: pkg=percona-xtrabackup update_cache=yes cache_valid_time=3600 allow_unauthenticated=yes
 - name: Copy across database backup script
   copy: src=database-backup.sh dest=/usr/local/bin/database-backup.sh mode=0500
 - name: Run database backup at 6:25am
