git ignore visual studio code files

--- a/.gitignore
+++ b/.gitignore
@@ -44,3 +44,4 @@ provisioning/roles/morph-app/files/ssl/dev.morph.io.key
 provisioning/roles/morph-app/files/ssl/dev.morph.io.pem
 provisioning/roles/geerlingguy.elasticsearch/
 .venv/
+.vscode
