--- a/.gitignore
+++ b/.gitignore
@@ -17,6 +17,7 @@
 /tmp/miniprofiler
 /tmp/sessions
 /tmp/sockets
+/tmp/restart.txt
 
 # Ignore the PID tempfiles but not the folder that holds them.
 /tmp/pids/*.pid
